Added complete pipeline